Add initial Paragon Anima directory

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "test": "node ."
   },
   "author": "Robert Humphrey",
   "license": "MIT",
