Initialized faux testing for Travis CI

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
-    "test": "node ."
+    "test": "node src/Test/index.js"
   },
   "author": "Robert Humphrey",
   "license": "MIT",
